[gd_scene load_steps=3 format=3 uid="uid://ce465tmrrukmt"]

[ext_resource type="Script" path="res://scripts/card_place.gd" id="1_a1p4w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gkie"]
size = Vector2(40, 86)

[node name="CardPlace" type="Node2D"]
script = ExtResource("1_a1p4w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_6gkie")

[node name="Buy_button" type="Button" parent="."]
offset_left = -19.0
offset_top = 7.0
offset_right = 20.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 10
text = "Buy"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="child_entered_tree" from="Area2D/CollisionShape2D" to="." method="_on_collision_shape_2d_child_entered_tree"]
[connection signal="child_exiting_tree" from="Area2D/CollisionShape2D" to="." method="_on_collision_shape_2d_child_exiting_tree"]
[connection signal="tree_entered" from="Area2D/CollisionShape2D" to="." method="_on_collision_shape_2d_tree_entered"]
[connection signal="tree_exited" from="Area2D/CollisionShape2D" to="." method="_on_collision_shape_2d_tree_exited"]
[connection signal="pressed" from="Buy_button" to="." method="_on_buy_button_pressed"]
